HU7: Conexión entre microservicios - User play track - Metric POST play en Python
